syntax = "proto3";

package ops;
import "google/protobuf/struct.proto";
option go_package = "pkg/proto/ops";  

service Ops {
  rpc Create (CreateReq) returns (CreatRes);
  rpc Insert (InsertReq) returns (InsertRes);
  rpc SecondaryInsert (InsertReq) returns (InsertRes);
  rpc Delete (DeleteReq) returns (DeleteRes);
  rpc SecondaryDelete (DeleteReq) returns (DeleteRes);
  rpc Select (SelectReq) returns (SelectRes);
}

message SelectReq {
  string document = 1;
  repeated string columns = 2;
  int64 id = 3;
}

message SelectRes {
  bytes data = 1; // will be in json bytes
}

message InsertReq {
  string document = 1;
  google.protobuf.Struct value = 2;
}

message InsertRes {
  bool status = 1;
}

message CreateReq {
  string document = 1;
  google.protobuf.Struct schema = 2;
}

message CreatRes {
  bool status = 1;
}

message DeleteReq {
  string document = 1;
  int64 id = 2;
}

message DeleteRes {
  bool status = 1;
}